// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App full app 1`] = `
<div
  class="App"
>
  <div
    class="App-header"
  >
    <img
      alt="logo"
      class="App-logo"
      src="file-stub"
    />
    <h2>
      Welcome to React
    </h2>
  </div>
  <p
    class="App-intro"
  >
    To get started, edit 
    <code>
      src/App.js
    </code>
     and save to reload.
  </p>
</div>
`;

exports[`Storyshots Button addons composition 1`] = `
<div>
  <div
    style="position:relative;z-index:0"
  >
    <div>
      click the 
      <span
        style="font-family:sans-serif;font-size:12px;text-decoration:none;background:rgb(34, 136, 204);color:rgb(255, 255, 255);padding:5px 15px;margin:10px;border-radius:0px 0px 0px 5px"
      >
         Show Info 
      </span>
       label in top right for info about "addons composition"
    </div>
  </div>
  <button
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>
  <div
    style="position:fixed;background:white;top:0;bottom:0;left:0;right:0;padding:0 40px;overflow:auto;z-index:99999;display:none"
  >
    <button
      style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style="font-family:-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif;color:#444;-webkit-font-smoothing:antialiased;font-weight:300;line-height:1.45;font-size:15px;border:1px solid #eee;padding:20px 40px 40px;border-radius:2px;box-shadow:0px 2px 3px rgba(0, 0, 0, 0.05);background-color:#fff;margin-top:20px;margin-bottom:20px"
      >
        <div
          style="border-bottom:1px solid #eee;padding-top:10px;margin-bottom:10px"
        >
          <h1
            style="margin:0;padding:0;font-size:35px"
          >
            Button
          </h1>
          <h2
            style="margin:0 0 10px 0;padding:0;font-weight:400;font-size:22px"
          >
            addons composition
          </h2>
        </div>
        <div
          style="margin-bottom:0"
        >
          <div
            style="font-family:-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif;color:#444;-webkit-font-smoothing:antialiased;font-size:15px"
          >
            see Notes panel for composition info
          </div>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Story Source
          </h1>
          <pre
            style="font-size:.88em;font-family:Menlo, Monaco, \\"Courier New\\", monospace;background-color:#fafafa;padding:.5rem;line-height:1.5;overflow-x:scroll"
          >
            <div>
              <div
                style="padding-left:18px;padding-right:3px"
              >
                <span
                  style="color:#777"
                >
                  &lt;div
                </span>
                <span />
                <span
                  style="color:#777"
                >
                  &gt;
                </span>
              </div>
              <div
                style="padding-left:33px;padding-right:3px"
              >
                <span
                  style="color:#777"
                />
              </div>
              <div
                style="padding-left:33px;padding-right:3px"
              >
                <span
                  style="color:#777"
                >
                  click the 
                </span>
              </div>
              <div
                style="padding-left:33px;padding-right:3px"
              >
                <span
                  style="color:#777"
                >
                  &lt;InfoButton
                </span>
                <span />
                <span
                  style="color:#777"
                >
                  /&gt;
                </span>
              </div>
              <div
                style="padding-left:33px;padding-right:3px"
              >
                <span
                  style="color:#777"
                >
                   label in top right for info about "
                </span>
              </div>
              <div
                style="padding-left:33px;padding-right:3px"
              >
                <span
                  style="color:#777"
                >
                  addons composition
                </span>
              </div>
              <div
                style="padding-left:33px;padding-right:3px"
              >
                <span
                  style="color:#777"
                >
                  "
                </span>
              </div>
              <div
                style="padding-left:18px;padding-right:3px"
              >
                <span
                  style="color:#777"
                >
                  &lt;/div&gt;
                </span>
              </div>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Prop Types
          </h1>
          <div>
            <h2
              style="margin:20px 0 0 0"
            >
              "InfoButton" Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button with new info 1`] = `
<div>
  <div
    style="position:relative;z-index:0"
  >
    <div
      title="the best container ever"
    >
      click the 
      <span
        style="font-family:sans-serif;font-size:12px;text-decoration:none;background:rgb(34, 136, 204);color:rgb(255, 255, 255);padding:5px 15px;margin:10px;border-radius:0px 0px 0px 5px"
      >
         Show Info 
      </span>
       label in top right for info about "with new info"
    </div>
  </div>
  <button
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>
  <div
    style="position:fixed;background:white;top:0;bottom:0;left:0;right:0;padding:0 40px;overflow:auto;z-index:99999;display:none"
  >
    <button
      style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style="font-family:-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif;color:#444;-webkit-font-smoothing:antialiased;font-weight:300;line-height:1.45;font-size:15px;border:1px solid #eee;padding:20px 40px 40px;border-radius:2px;box-shadow:0px 2px 3px rgba(0, 0, 0, 0.05);background-color:#fff;margin-top:20px;margin-bottom:20px"
      >
        <div
          style="border-bottom:1px solid #eee;padding-top:10px;margin-bottom:10px"
        >
          <h1
            style="margin:0;padding:0;font-size:35px"
          >
            Button
          </h1>
          <h2
            style="margin:0 0 10px 0;padding:0;font-weight:400;font-size:22px"
          >
            with new info
          </h2>
        </div>
        <div
          style="margin-bottom:0"
        >
          <div
            style="font-family:-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif;color:#444;-webkit-font-smoothing:antialiased;font-size:15px"
          >
            Use the 
            <a
              href="https://github.com/storybooks/storybook/tree/master/addons/info"
              rel="noopener noreferrer"
              style="color:#3498db"
              target="_blank"
            >
              info addon
            </a>
             with its new painless API.
          </div>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Story Source
          </h1>
          <pre
            style="font-size:.88em;font-family:Menlo, Monaco, \\"Courier New\\", monospace;background-color:#fafafa;padding:.5rem;line-height:1.5;overflow-x:scroll"
          >
            <div>
              <div
                style="padding-left:18px;padding-right:3px"
              >
                <span
                  style="color:#777"
                >
                  &lt;Container
                </span>
                <span />
                <span
                  style="color:#777"
                >
                  &gt;
                </span>
              </div>
              <div
                style="padding-left:33px;padding-right:3px"
              >
                <span
                  style="color:#777"
                />
              </div>
              <div
                style="padding-left:33px;padding-right:3px"
              >
                <span
                  style="color:#777"
                >
                  click the 
                </span>
              </div>
              <div
                style="padding-left:33px;padding-right:3px"
              >
                <span
                  style="color:#777"
                >
                  &lt;InfoButton
                </span>
                <span />
                <span
                  style="color:#777"
                >
                  /&gt;
                </span>
              </div>
              <div
                style="padding-left:33px;padding-right:3px"
              >
                <span
                  style="color:#777"
                >
                   label in top right for info about "
                </span>
              </div>
              <div
                style="padding-left:33px;padding-right:3px"
              >
                <span
                  style="color:#777"
                >
                  with new info
                </span>
              </div>
              <div
                style="padding-left:33px;padding-right:3px"
              >
                <span
                  style="color:#777"
                >
                  "
                </span>
              </div>
              <div
                style="padding-left:18px;padding-right:3px"
              >
                <span
                  style="color:#777"
                >
                  &lt;/Container&gt;
                </span>
              </div>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Prop Types
          </h1>
          <div>
            <h2
              style="margin:20px 0 0 0"
            >
              "Container" Component
            </h2>
            <table
              class="css-1ytzlk7"
            >
              <thead>
                <tr>
                  <th
                    class="css-d52hbj"
                  >
                    property
                  </th>
                  <th
                    class="css-d52hbj"
                  >
                    propType
                  </th>
                  <th
                    class="css-d52hbj"
                  >
                    required
                  </th>
                  <th
                    class="css-d52hbj"
                  >
                    default
                  </th>
                  <th
                    class="css-d52hbj"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    class="css-1ygfcef"
                  >
                    children
                  </td>
                  <td
                    class="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    class="css-d52hbj"
                  >
                    yes
                  </td>
                  <td
                    class="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    class="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    class="css-1ygfcef"
                  >
                    isAmazing
                  </td>
                  <td
                    class="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    class="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    class="css-d52hbj"
                  >
                    <span>
                      {
                      <span
                        style="color:#a11"
                      >
                        false
                      </span>
                      }
                    </span>
                  </td>
                  <td
                    class="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    class="css-1ygfcef"
                  >
                    age
                  </td>
                  <td
                    class="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    class="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    class="css-d52hbj"
                  >
                    <span>
                      {
                      <span
                        style="color:#666"
                      >
                        {
                        <span
                          style="color:#666"
                        >
                          isOld
                        </span>
                        : 
                        <span>
                          {
                          <span
                            style="color:#a11"
                          >
                            false
                          </span>
                          }
                        </span>
                        , 
                        <span
                          style="color:#666"
                        >
                          value
                        </span>
                        : 
                        <span>
                          {
                          <span
                            style="color:#a11"
                          >
                            0
                          </span>
                          }
                        </span>
                        }
                      </span>
                      }
                    </span>
                  </td>
                  <td
                    class="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    class="css-1ygfcef"
                  >
                    title
                  </td>
                  <td
                    class="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    class="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    class="css-d52hbj"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    >
                      "the best container ever"
                    </span>
                  </td>
                  <td
                    class="css-d52hbj"
                  />
                </tr>
              </tbody>
            </table>
          </div>
          <div>
            <h2
              style="margin:20px 0 0 0"
            >
              "InfoButton" Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button with notes 1`] = `
<button
  class="css-1yjiefr"
>
  Check my notes in the notes panel
</button>
`;

exports[`Storyshots Button with some emoji 1`] = `
<button
  class="css-1yjiefr"
>
  😀 😎 👍 💯
</button>
`;

exports[`Storyshots Button with some info 1`] = `
<div>
  <div
    style="position:relative;z-index:0"
  >
    <div
      title="the best container ever"
    >
      click the 
      <span
        style="font-family:sans-serif;font-size:12px;text-decoration:none;background:rgb(34, 136, 204);color:rgb(255, 255, 255);padding:5px 15px;margin:10px;border-radius:0px 0px 0px 5px"
      >
         Show Info 
      </span>
       label in top right for info about "with some info"
    </div>
  </div>
  <button
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>
  <div
    style="position:fixed;background:white;top:0;bottom:0;left:0;right:0;padding:0 40px;overflow:auto;z-index:99999;display:none"
  >
    <button
      style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style="font-family:-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif;color:#444;-webkit-font-smoothing:antialiased;font-weight:300;line-height:1.45;font-size:15px;border:1px solid #eee;padding:20px 40px 40px;border-radius:2px;box-shadow:0px 2px 3px rgba(0, 0, 0, 0.05);background-color:#fff;margin-top:20px;margin-bottom:20px"
      >
        <div
          style="border-bottom:1px solid #eee;padding-top:10px;margin-bottom:10px"
        >
          <h1
            style="margin:0;padding:0;font-size:35px"
          >
            Button
          </h1>
          <h2
            style="margin:0 0 10px 0;padding:0;font-weight:400;font-size:22px"
          >
            with some info
          </h2>
        </div>
        <div
          style="margin-bottom:0"
        >
          <div
            style="font-family:-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif;color:#444;-webkit-font-smoothing:antialiased;font-size:15px"
          >
            Use the 
            <a
              href="https://github.com/storybooks/storybook/tree/master/addons/info"
              rel="noopener noreferrer"
              style="color:#3498db"
              target="_blank"
            >
              info addon
            </a>
             with its painful API.
          </div>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Story Source
          </h1>
          <pre
            style="font-size:.88em;font-family:Menlo, Monaco, \\"Courier New\\", monospace;background-color:#fafafa;padding:.5rem;line-height:1.5;overflow-x:scroll"
          >
            <div>
              <div
                style="padding-left:18px;padding-right:3px"
              >
                <span
                  style="color:#777"
                >
                  &lt;Container
                </span>
                <span />
                <span
                  style="color:#777"
                >
                  &gt;
                </span>
              </div>
              <div
                style="padding-left:33px;padding-right:3px"
              >
                <span
                  style="color:#777"
                >
                  click the 
                </span>
              </div>
              <div
                style="padding-left:33px;padding-right:3px"
              >
                <span
                  style="color:#777"
                >
                  &lt;InfoButton
                </span>
                <span />
                <span
                  style="color:#777"
                >
                  /&gt;
                </span>
              </div>
              <div
                style="padding-left:33px;padding-right:3px"
              >
                <span
                  style="color:#777"
                >
                   label in top right for info about "
                </span>
              </div>
              <div
                style="padding-left:33px;padding-right:3px"
              >
                <span
                  style="color:#777"
                >
                  with some info
                </span>
              </div>
              <div
                style="padding-left:33px;padding-right:3px"
              >
                <span
                  style="color:#777"
                >
                  "
                </span>
              </div>
              <div
                style="padding-left:18px;padding-right:3px"
              >
                <span
                  style="color:#777"
                >
                  &lt;/Container&gt;
                </span>
              </div>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Prop Types
          </h1>
          <div>
            <h2
              style="margin:20px 0 0 0"
            >
              "Container" Component
            </h2>
            <table
              class="css-1ytzlk7"
            >
              <thead>
                <tr>
                  <th
                    class="css-d52hbj"
                  >
                    property
                  </th>
                  <th
                    class="css-d52hbj"
                  >
                    propType
                  </th>
                  <th
                    class="css-d52hbj"
                  >
                    required
                  </th>
                  <th
                    class="css-d52hbj"
                  >
                    default
                  </th>
                  <th
                    class="css-d52hbj"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    class="css-1ygfcef"
                  >
                    children
                  </td>
                  <td
                    class="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    class="css-d52hbj"
                  >
                    yes
                  </td>
                  <td
                    class="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    class="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    class="css-1ygfcef"
                  >
                    isAmazing
                  </td>
                  <td
                    class="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    class="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    class="css-d52hbj"
                  >
                    <span>
                      {
                      <span
                        style="color:#a11"
                      >
                        false
                      </span>
                      }
                    </span>
                  </td>
                  <td
                    class="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    class="css-1ygfcef"
                  >
                    age
                  </td>
                  <td
                    class="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    class="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    class="css-d52hbj"
                  >
                    <span>
                      {
                      <span
                        style="color:#666"
                      >
                        {
                        <span
                          style="color:#666"
                        >
                          isOld
                        </span>
                        : 
                        <span>
                          {
                          <span
                            style="color:#a11"
                          >
                            false
                          </span>
                          }
                        </span>
                        , 
                        <span
                          style="color:#666"
                        >
                          value
                        </span>
                        : 
                        <span>
                          {
                          <span
                            style="color:#a11"
                          >
                            0
                          </span>
                          }
                        </span>
                        }
                      </span>
                      }
                    </span>
                  </td>
                  <td
                    class="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    class="css-1ygfcef"
                  >
                    title
                  </td>
                  <td
                    class="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    class="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    class="css-d52hbj"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    >
                      "the best container ever"
                    </span>
                  </td>
                  <td
                    class="css-d52hbj"
                  />
                </tr>
              </tbody>
            </table>
          </div>
          <div>
            <h2
              style="margin:20px 0 0 0"
            >
              "InfoButton" Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button with text 1`] = `
<button
  class="css-1yjiefr"
>
  Hello Button
</button>
`;

exports[`Storyshots Lifecycle logging 1`] = `
<div>
  Lifecycle methods are logged to the console
</div>
`;

exports[`Storyshots Some really long story kind description with text 1`] = `
<div
  style="position:fixed;top:0;left:0;bottom:0;right:0;display:flex;align-items:center;justify-content:center;overflow:auto"
>
  <div
    style="margin:auto"
  >
    <button
      class="css-1yjiefr"
    >
      Hello Button
    </button>
  </div>
</div>
`;
